--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
         <h1>GUESS GAME</h1>
       </div>
     </header>
-    <section>
-      <div></div>
+    <section class="main">
+      <div class="icondiv">
+        <img class="icon" src="img/guess.png" alt="Guess Icon" />
+      </div>
+      <div class="inputdiv">
+        <p><input class="guess" type="number" name="guess" /></p>
+        <p><input type="button" value="GUESS" /></p>
+      </div>
+      <div class="scores">
+        <p>START GUESSING!</p>
+        <p>SCORE</p>
+        <p>HIGHSCORE</p>
+      </div>
     </section>
 
     <script src="script.js"></script>
