--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
       </div>
     </header>
     <section class="main">
-      <div class="icondiv">
-        <img class="icon" src="img/guess.png" alt="Guess Icon" />
+      <div class="middlebox">
+        <p>?</p>
       </div>
       <div class="inputdiv">
         <p><input class="guess" type="number" name="guess" /></p>
         <p><input type="button" value="GUESS" /></p>
       </div>
-      <div class="scores">
-        <p>START GUESSING!</p>
-        <p>SCORE</p>
-        <p>HIGHSCORE</p>
+      <div class="status">
+        <p class="alertp">START GUESSING!</p>
+        <p class="scorep">SCORE:<span class="score">0</span></p>
+        <p class="highscorep">HIGHSCORE:<span class="highscore">0</span></p>
       </div>
     </section>
 
