guess filter working

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       </div>
       <div class="inputdiv">
         <p><input class="guess" type="number" name="guess" /></p>
-        <p><input type="button" value="GUESS" /></p>
+        <p><input class="guessbtn" type="button" value="GUESS" /></p>
       </div>
       <div class="status">
-        <p class="alertp">START GUESSING!</p>
-        <p class="scorep">SCORE:<span class="score">0</span></p>
-        <p class="highscorep">HIGHSCORE:<span class="highscore">0</span></p>
+        <p class="pscore">SCORE:<span class="score">0</span></p>
+        <p class="phighscore">HIGHSCORE:<span class="highscore">0</span></p>
+      </div>
+      <div class="alertdiv">
+        <p class="palert">GUESS A NUMBER BETWEEN 1 AND 20</p>
       </div>
     </section>
 
