--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
       </div>
     </header>
     <section class="main">
+      <input class="newgamebtn" type="button" value="AGAIN" />
       <div class="middlebox">
-        <p>?</p>
+        <p class="txtmidfield">?</p>
       </div>
       <div class="inputdiv">
         <p><input class="guess" type="number" name="guess" /></p>
         <p><input class="guessbtn" type="button" value="GUESS" /></p>
       </div>
       <div class="status">
-        <p class="pscore">SCORE:<span class="score">0</span></p>
-        <p class="phighscore">HIGHSCORE:<span class="highscore">0</span></p>
+        <p class="pscore">SCORE:<span class="txtscore">20</span></p>
+        <p class="phighscore">HIGHSCORE:<span class="txthighscore">0</span></p>
       </div>
       <div class="alertdiv">
         <p class="palert">GUESS A NUMBER BETWEEN 1 AND 20</p>
